--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 title                    : "Zijiang Yang"
-description              : "Null"
+description              : "Pratt School of "
 repository               : "RiverYang927/RiverYang927.github.io"
 google_scholar_stats_use_cdn : false
 
