--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   name             : "Zijiang Yang"
   avatar           : "images/android-chrome-512x512.png"
   bio              : "Duke University"
-  location         : "Durham NC，USA"
+  location         : "Durham, NC, USA"
   employer         : #"Hefei General Machinery Research Institute"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=WMkMTb4AAAAJ"
