--- a/_config.yml
+++ b/_config.yml
@@ -23,40 +23,40 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 author:
   name             : "Zijiang Yang"
   avatar           : "images/android-chrome-512x512.png"
-  bio              : "Duke University"
+  # bio              : " "
   location         : "Durham, NC, USA"
-  employer         : #"Hefei General Machinery Research Institute"
-  pubmed           : 
-  googlescholar    : "https://scholar.google.com/citations?user=WMkMTb4AAAAJ"
-  email            : "tangj@hust.edu.cn"
-  researchgate     : "https://www.researchgate.net/profile/Jian-Tang-53"
-  uri              : 
-  bitbucket        :
-  codepen          :
-  dribbble         :
-  flickr           :
-  facebook         :
-  foursquare       :
-  github           : "tangjyan"
-  google_plus      :
-  keybase          :
-  instagram        :
-  impactstory      : # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
-  lastfm           :
-  linkedin         : # e.g., "linkedin username"
-  dblp             : # e.g., "https://dblp.org/pid/xx/xxxx.html"
-  orcid            : "https://orcid.org/0000-0001-9658-209X"
-  pinterest        :
-  soundcloud       :
-  stackoverflow    : # http://stackoverflow.com/users/123456/username
-  steam            :
-  tumblr           :
-  twitter          : 
-  vine             :
-  weibo            :
-  xing             :
-  youtube          :
-  wikipedia        :
+  # employer         : #"Hefei General Machinery Research Institute"
+  # pubmed           : 
+  # googlescholar    : "https://scholar.google.com/citations?user=WMkMTb4AAAAJ"
+  email            : "zy232@duke.edu"
+  # researchgate     : "https://www.researchgate.net/profile/Jian-Tang-53"
+  # uri              : 
+  # bitbucket        :
+  # codepen          :
+  # dribbble         :
+  # flickr           :
+  # facebook         :
+  # foursquare       :
+  # # github           : "tangjyan"
+  # google_plus      :
+  # keybase          :
+  # instagram        :
+  # impactstory      : # e.g., "https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
+  # lastfm           :
+  # linkedin         : # e.g., "linkedin username"
+  # dblp             : # e.g., "https://dblp.org/pid/xx/xxxx.html"
+  # # orcid            : "https://orcid.org/0000-0001-9658-209X"
+  # pinterest        :
+  # soundcloud       :
+  # stackoverflow    : # http://stackoverflow.com/users/123456/username
+  # steam            :
+  # tumblr           :
+  # twitter          : 
+  # vine             :
+  # weibo            :
+  # xing             :
+  # youtube          :
+  # wikipedia        :
 
 
 # Reading Files
