--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ baidu_site_verification  :  # get baidu_site_verification from https://ziyuan.ba
 # Site Author
 author:
   name             : "Zijiang Yang"
-  avatar           : "images/android-chrome-512x512.png"
+  avatar           : "images/ZijiangYang.jpg"
   # bio              : " "
   location         : "Durham, NC, USA"
   # employer         : #"Hefei General Machinery Research Institute"
